@@ -1,6 +1,7 @@
 **pnp-0.6.18 ??/??/2012**
   * Bugfix:  Fixed STORAGE_TYPE and CUSTOM_TEMPLATE vars used in custom templates
-  * Bugfix:  Blank Screen on PHP 5.4 fixed
+  * Bugfix:  Blank screen on PHP 5.4 fixed
+  * Feature: Allow multiple gearman job servers
 
 **pnp-0.6.17 03/25/2012**
   * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
